--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "common"]
-    path= features
-    url=https://github.com/srinivasaraojyothi/seleniumpythonactionbot.git 
+[submodule "seleniumpythonactionbot"]
+	path = seleniumpythonactionbot
+	url = https://github.com/srinivasaraojyothi/seleniumpythonactionbot.git
+	branch = main
