--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ pycparser==2.21
 Pygments==2.12.0
 pyOpenSSL==22.0.0
 pyparsing==3.0.9
-pyseleniumbot==1.0.3
+pyallied==1.0.3
 PySocks==1.7.1
 pytest==7.1.2
 pytest-bdd==5.0.0
