--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,30 @@
 [pytest]
 bdd_features_base_dir = features/
+[loggers]
+keys=root
+
+[handlers]
+keys=file_handler,stream_handler
+
+[formatters]
+keys=formatter
+
+[logger_root]
+level=DEBUG
+handlers=stream_handler,file_handler
+
+[handler_stream_handler]
+class=StreamHandler
+level=DEBUG
+formatter=formatter
+args=(sys.stderr,)
+
+[handler_file_handler]
+class=FileHandler
+level=DEBUG
+formatter=formatter
+args=('execution.log',)
+
+[formatter_formatter]
+format=%(asctime)-s %(name)s %(module)s %(funcName)s %(levelname)-8s %(message)s
+datefmt=%Y-%m-%d %H:%M:%S
