--- a/requirements.txt
+++ b/requirements.txt
@@ -66,7 +66,7 @@ requests==2.27.1
 requests-toolbelt==0.9.1
 rfc3986==2.0.0
 rich==12.4.4
-selenium==4.1.5
+selenium==4.2.0
 setuptools==58.1.0
 six==1.16.0
 sniffio==1.2.0
@@ -84,3 +84,7 @@ wsproto==1.1.0
 zipp==3.8.0
 pandas==1.4.2
 numpy==1.22.4
+seletools==1.2.1
+Pillow==9.1.1
+xlrd==1.2.0
+tweepy==4.10.0
