--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
+adbutils==0.16.2
+allure-pytest==2.9.45
+apkutils2==1.0.0
+argcomplete==1.10.3
+Automat==20.2.0
+autopep8==1.6.0
+bcrypt==3.2.2
+beautifulsoup4==4.8.2
+behave==1.2.6
+
 allure-pytest-bdd==2.9.45
 allure-python-commons==2.9.45
 async-generator==1.10
@@ -8,16 +18,42 @@ behave-html-formatter==0.9.8
 bleach==5.0.0
 build==0.8.0
 bumpver==2022.1116
+cached-property==1.5.2
+
 certifi==2022.5.18.1
 cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.4
+
 commonmark==0.9.1
+compressed-rtf==1.0.6
+constantly==15.1.0
+
 configobj==5.0.6
 cryptography==37.0.2
 csscompressor==0.9.5
+cycler==0.11.0
+decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.13
+deprecation==2.1.0
+distro==1.7.0
+docker==4.2.2
+hyperlink==21.0.0
+
 distlib==0.3.4
+docker-compose==1.26.2
+dockerpty==0.4.1
+docopt==0.6.2
+docx2txt==0.8
+e==1.4.5
+easyocr==1.5.0
+ebcdic==1.1.1
+et-xmlfile==1.1.0
+extract-msg==0.28.7
+fonttools==4.33.3
+html-testRunner==1.2.1
 docutils==0.18.1
 enum34==1.1.10
 execnet==1.9.0
@@ -26,11 +62,25 @@ glob2==0.7
 h11==0.13.0
 htmlmin==0.1.12
 idna==3.3
+imageio==2.19.3
+imap-tools==0.56.0
+IMAPClient==2.1.0
+incremental==21.3.0
 importlib-metadata==4.11.4
+jsonschema==3.2.0
+localmail==0.5.0
+logzero==1.7.0
+
 iniconfig==1.1.1
 Jinja2==3.1.2
 junit-xml==1.9
 keyring==23.5.1
+kitchen==1.2.6
+kiwisolver==1.4.3
+linecache2==1.0.0
+matplotlib==3.5.2
+networkx==2.8.4
+
 lexid==2021.1006
 lxml==4.8.0
 Mako==1.2.0
@@ -47,16 +97,18 @@ pkginfo==1.8.2
 platformdirs==2.5.2
 pluggy==1.0.0
 py==1.11.0
+pyasn1==0.4.8
 pycparser==2.21
 Pygments==2.12.0
 pyOpenSSL==22.0.0
 pyparsing==3.0.9
-pyallied==1.0.3
+pyallied==1.0.4
 PySocks==1.7.1
 pytest==7.1.2
 pytest-bdd==5.0.0
 pytest-forked==1.4.0
 pytest-html==3.1.1
+pytest-lazy-fixture==0.6.3
 pytest-metadata==2.0.1
 pytest-rerunfailures==10.2
 pytest-xdist==2.5.0
@@ -64,12 +116,23 @@ pywin32-ctypes==0.2.0
 readme-renderer==35.0
 requests==2.27.1
 requests-toolbelt==0.9.1
+requests-oauthlib==1.3.1
 rfc3986==2.0.0
+robotframework==4.0.3
 rich==12.4.4
 selenium==4.2.0
+scikit-image==0.19.3
+progress==1.6
+polling2==0.5.0
 setuptools==58.1.0
 six==1.16.0
+slate3k==0.5.3
+scipy==1.8.1
+psutil==5.9.1
+stdlib-list==0.8.0
+SpeechRecognition==3.8.1
 sniffio==1.2.0
+soupsieve==2.3.2.post1
 sortedcontainers==2.4.0
 toml==0.10.2
 tomli==2.0.1
@@ -84,7 +147,69 @@ wsproto==1.1.0
 zipp==3.8.0
 pandas==1.4.2
 numpy==1.22.4
+oauthlib==3.2.0
 seletools==1.2.1
+service-identity==21.1.0
 Pillow==9.1.1
 xlrd==1.2.0
 tweepy==4.10.0
+odfpy==1.4.1
+olefile==0.46
+opencv-python==4.6.0.66
+opencv-python-headless==4.5.4.60
+openpyxl==3.0.10
+pdfminer.six==20191110
+paramiko==2.11.0
+pdfminer3k==1.3.4
+pyasn1-modules==0.2.8
+pycodestyle==2.8.0
+pycryptodome==3.15.0
+pyelftools==0.28
+PyNaCl==1.5.0
+PyPDF2==2.4.1
+PyPDF4==1.27.0
+pypiwin32==223
+Pypubsub==4.0.3
+pyrsistent==0.18.1
+pyseleniumbot==1.0.7
+python-dateutil==2.8.2
+python-dotenv==0.20.0
+python-pptx==0.6.21
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
+PyWavelets==1.3.0
+pywin32==304
+PyYAML==5.4.1
+retry==0.9.2
+textract==1.6.5
+texttable==1.6.4
+tifffile==2022.5.4
+toml==0.10.2
+tomli==2.0.1
+torch==1.11.0
+torchvision==0.12.0
+traceback2==1.4.0
+trio==0.20.0
+trio-websocket==0.9.2
+tweepy==4.10.0
+twine==4.0.0
+Twisted==22.4.0
+twisted-iocpsupport==1.0.2
+typed-ast==1.5.4
+typing_extensions==4.2.0
+tzdata==2022.1
+tzlocal==4.2
+uiautomator2==2.16.14
+unittest2==1.1.0
+virtualenv==20.14.1
+webencodings==0.5.1
+websocket-client==0.59.0
+wheel==0.37.1
+whichcraft==0.6.1
+wrapt==1.14.1
+wsproto==1.1.0
+xlrd==1.2.0
+XlsxWriter==3.0.3
+xmltodict==0.13.0
+zipp==3.8.0
+zope.interface==5.4.0
