--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,6 @@ Automat==20.2.0
 autopep8==1.6.0
 bcrypt==3.2.2
 beautifulsoup4==4.8.2
-behave==1.2.6
-
 allure-pytest-bdd==2.9.45
 allure-python-commons==2.9.45
 async-generator==1.10
@@ -19,17 +17,14 @@ bleach==5.0.0
 build==0.8.0
 bumpver==2022.1116
 cached-property==1.5.2
-
 certifi==2022.5.18.1
 cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.4
-
 commonmark==0.9.1
 compressed-rtf==1.0.6
 constantly==15.1.0
-
 configobj==5.0.6
 cryptography==37.0.2
 csscompressor==0.9.5
@@ -41,7 +36,6 @@ deprecation==2.1.0
 distro==1.7.0
 docker==4.2.2
 hyperlink==21.0.0
-
 distlib==0.3.4
 docker-compose==1.26.2
 dockerpty==0.4.1
@@ -70,7 +64,6 @@ importlib-metadata==4.11.4
 jsonschema==3.2.0
 localmail==0.5.0
 logzero==1.7.0
-
 iniconfig==1.1.1
 Jinja2==3.1.2
 junit-xml==1.9
@@ -80,7 +73,6 @@ kiwisolver==1.4.3
 linecache2==1.0.0
 matplotlib==3.5.2
 networkx==2.8.4
-
 lexid==2021.1006
 lxml==4.8.0
 Mako==1.2.0
@@ -184,14 +176,10 @@ texttable==1.6.4
 tifffile==2022.5.4
 toml==0.10.2
 tomli==2.0.1
-torch==1.11.0
-torchvision==0.12.0
-traceback2==1.4.0
-trio==0.20.0
-trio-websocket==0.9.2
 tweepy==4.10.0
 twine==4.0.0
 Twisted==22.4.0
+pywin32==304
 twisted-iocpsupport==1.0.2
 typed-ast==1.5.4
 typing_extensions==4.2.0
