--- a/requirements.txt
+++ b/requirements.txt
@@ -47,18 +47,23 @@ pkginfo==1.8.2
 platformdirs==2.5.2
 pluggy==1.0.0
 py==1.11.0
+pandas==1.4.2
 pycparser==2.21
 Pygments==2.12.0
 pyOpenSSL==22.0.0
 pyparsing==3.0.9
-pyallied==1.0.3
+pyallied==1.0.5
 PySocks==1.7.1
+seletools==1.2.1
 pytest==7.1.2
 pytest-bdd==5.0.0
 pytest-forked==1.4.0
 pytest-html==3.1.1
 pytest-metadata==2.0.1
 pytest-rerunfailures==10.2
+Pillow==9.1.1
+xlrd==1.2.0
+tweepy==4.10.0
 pytest-xdist==2.5.0
 pywin32-ctypes==0.2.0
 readme-renderer==35.0
@@ -66,7 +71,8 @@ requests==2.27.1
 requests-toolbelt==0.9.1
 rfc3986==2.0.0
 rich==12.4.4
-selenium==4.1.5
+selenium==4.2.0
+polling2==0.5.0
 setuptools==58.1.0
 six==1.16.0
 sniffio==1.2.0
