--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-allure-pytest-bdd==2.9.45
 allure-python-commons==2.9.45
 async-generator==1.10
 Appium-Python-Client==2.2.0
@@ -70,6 +69,7 @@ readme-renderer==35.0
 requests==2.27.1
 requests-toolbelt==0.9.1
 rfc3986==2.0.0
+allure-pytest==2.9.45
 rich==12.4.4
 selenium==4.2.0
 polling2==0.5.0
